RESOLVED FIXED162471
AX: iOS: Tapping <input> in Safari zooms in a bit when page has max scale = 1
https://bugs.webkit.org/show_bug.cgi?id=162471
Summary AX: iOS: Tapping <input> in Safari zooms in a bit when page has max scale = 1
Nan Wang
Reported 2016-09-22 16:17:36 PDT
We were ignoring force always user scalable for input field but we missed a case where web authors sometimes set maximum scale to 1 instead of user-scalable=no. <rdar://problem/27137434>
Attachments
patch (16.73 KB, patch)
2016-09-22 16:29 PDT, Nan Wang
no flags
patch (16.73 KB, patch)
2016-09-22 16:30 PDT, Nan Wang
no flags
patch (16.84 KB, patch)
2016-09-22 17:21 PDT, Nan Wang
no flags
patch (16.98 KB, patch)
2016-09-22 18:15 PDT, Nan Wang
no flags
patch (18.04 KB, patch)
2016-09-22 19:08 PDT, Nan Wang
no flags
patch (21.97 KB, patch)
2016-09-22 22:03 PDT, Nan Wang
no flags
patch (22.13 KB, patch)
2016-09-22 23:40 PDT, Nan Wang
no flags
patch (24.90 KB, patch)
2016-09-29 15:51 PDT, Nan Wang
no flags
Nan Wang
Comment 1 2016-09-22 16:29:33 PDT
WebKit Commit Bot
Comment 2 2016-09-22 16:30:26 PDT
Attachment 289628 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1105: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Nan Wang
Comment 3 2016-09-22 16:30:45 PDT
Created attachment 289629 [details] patch fixed a typo
WebKit Commit Bot
Comment 4 2016-09-22 16:33:11 PDT
Attachment 289629 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1105: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Nan Wang
Comment 5 2016-09-22 17:21:08 PDT
Created attachment 289634 [details] patch fixing timeout tests.
WebKit Commit Bot
Comment 6 2016-09-22 17:22:02 PDT
Attachment 289634 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1105: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Nan Wang
Comment 7 2016-09-22 18:15:13 PDT
Created attachment 289640 [details] patch let's fix the tests again :(
WebKit Commit Bot
Comment 8 2016-09-22 18:17:39 PDT
Attachment 289640 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1105: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Nan Wang
Comment 9 2016-09-22 19:08:30 PDT
Created attachment 289648 [details] patch I figured touch events are not supported in layout tests
WebKit Commit Bot
Comment 10 2016-09-22 19:10:02 PDT
Attachment 289648 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1105: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 16 files If any of these errors are false positives, please file a bug against check-webkit-style.
Nan Wang
Comment 11 2016-09-22 22:03:49 PDT
Created attachment 289662 [details] patch Moved the tests to the right place.
WebKit Commit Bot
Comment 12 2016-09-22 22:05:42 PDT
Attachment 289662 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1105: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Nan Wang
Comment 13 2016-09-22 23:40:16 PDT
Created attachment 289665 [details] patch Actually those tests were failing on my local machine after moving to a different place :( Now fixed it, should be good...
WebKit Commit Bot
Comment 14 2016-09-22 23:42:32 PDT
Attachment 289665 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1105: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 15 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 15 2016-09-29 14:38:26 PDT
Comment on attachment 289665 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=289665&action=review > Source/WebCore/page/ViewportConfiguration.h:95 > + double maximumScaleIgnoringForceAlwaysScaling() const { return m_configuration.maximumScale; } Maybe "maximumScaleIgnoringAlwaysScalable()" > Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:332 > + if (!m_viewportConfiguration.allowsUserScalingIgnoringForceAlwaysScaling()) I literally cannot parse "allowsUserScalingIgnoringForceAlwaysScaling" > Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:333 > + return m_page->pageScaleFactor(); This seems wrong. Shouldn't this return m_viewportConfiguration.maximumScale() ? > Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:2553 > + information.maximumScaleFactorIgnoringForceAlwaysScaling = maximumPageScaleFactorIgnoringForceAlwaysScaling(); Can we use "ignoringForceAlwaysScalable everywhere?
Nan Wang
Comment 16 2016-09-29 14:46:54 PDT
Comment on attachment 289665 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=289665&action=review >> Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:332 >> + if (!m_viewportConfiguration.allowsUserScalingIgnoringForceAlwaysScaling()) > > I literally cannot parse "allowsUserScalingIgnoringForceAlwaysScaling" I'll try to rename this with ignoringForceAlwaysScalable >> Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:333 >> + return m_page->pageScaleFactor(); > > This seems wrong. Shouldn't this return m_viewportConfiguration.maximumScale() ? I'm not an expert on this but I copied the logic from WebPage::maximumPageScaleFactor() >> Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm:2553 >> + information.maximumScaleFactorIgnoringForceAlwaysScaling = maximumPageScaleFactorIgnoringForceAlwaysScaling(); > > Can we use "ignoringForceAlwaysScalable everywhere? ok
Nan Wang
Comment 17 2016-09-29 15:51:51 PDT
Created attachment 290257 [details] patch Renamed IgnoringForceAlwaysScaling to IgnoringAlwaysScalable.
WebKit Commit Bot
Comment 18 2016-09-29 15:54:07 PDT
Attachment 290257 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1105: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1106: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 2 in 16 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 19 2016-09-29 17:40:42 PDT
Comment on attachment 290257 [details] patch Clearing flags on attachment: 290257 Committed r206626: <http://trac.webkit.org/changeset/206626>
WebKit Commit Bot
Comment 20 2016-09-29 17:40:47 PDT
All reviewed patches have been landed. Closing bug.
siim
Comment 21 2023-04-17 13:57:29 PDT
Still broken in iOS 16.4.1
Note You need to log in before you can comment on or make changes to this bug.