Source/WebKit2/Shared/AssistedNodeInformation.h
@@ -91,6 +91,7 @@ struct AssistedNodeInformation {
     WebCore::IntRect selectionRect;
     double minimumScaleFactor { -INFINITY };
     double maximumScaleFactor { INFINITY };
+    double maximumScaleFactorIgnoringAlwaysScalable { INFINITY };
     double nodeFontSize { 0 };
     bool hasNextNode { false };
     bool hasPreviousNode { false };
@@ -99,7 +100,7 @@ struct AssistedNodeInformation {
     bool isMultiSelect { false };
     bool isReadOnly {false };
     bool allowsUserScaling { false };
-    bool allowsUserScalingIgnoringForceAlwaysScaling { false };
+    bool allowsUserScalingIgnoringAlwaysScalable { false };
     bool insideFixedPosition { false };
     WebAutocapitalizeType autocapitalizeType { WebAutocapitalizeTypeDefault };
     InputType elementType { InputType::None };
